[package]
name = "toyterm"
version = "0.2.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2021"

[[bin]]
name = "toyterm"
path = "src/main.rs"

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_warn"] }
env_logger = "0.9.0"
unicode-width = "0.1.9"
glium = "0.31.0"
freetype-rs = "0.26.0"
arboard = { version = "2.1.1", default-features = false }
serde = { version = "1", features = ["derive"] }
config = { version = "0.13.1", default-features = false, features = ["toml"] }
lazy_static = "1.4.0"
lru = { version = "0.7.8", default-features = false }

chrono = { optional = true, version = "0.4.22", default-features = false, features = ["clock"] }
serde_json = { optional = true, version = "1.0.83" }
filedescriptor = "0.8.2"
crossbeam-channel = "0.5.8"
portable-pty = "0.8.1"


[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.24.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "fileapi", "winbase", "winerror", "namedpipeapi", "handleapi", "errhandlingapi"] }
portable-pty = "0.8.1"

[features]
default = []
multiplex = ["chrono", "serde_json"]
